Posfixo/posfixo.output
Terminals unused in grammar

    ABRE_PARENTESES
    FECHA_PARENTESES


Grammar

    0 $accept: expr $end

    1 expr: expr MAIS termo
    2     | expr MENOS termo
    3     | expr OR termo
    4     | termo

    5 termo: termo ASTERISCO fator
    6      | termo DIV fator
    7      | termo AND fator
    8      | fator

    9 fator: AIDENT
   10      | BIDENT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AIDENT (258) 9
    BIDENT (259) 10
    MAIS (260) 1
    MENOS (261) 2
    ASTERISCO (262) 5
    DIV (263) 6
    ABRE_PARENTESES (264)
    FECHA_PARENTESES (265)
    AND (266) 7
    OR (267) 3


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    expr (14)
        on left: 1 2 3 4
        on right: 0 1 2 3
    termo (15)
        on left: 5 6 7 8
        on right: 1 2 3 4 5 6 7
    fator (16)
        on left: 9 10
        on right: 5 6 7 8


State 0

    0 $accept: . expr $end

    AIDENT  shift, and go to state 1
    BIDENT  shift, and go to state 2

    expr   go to state 3
    termo  go to state 4
    fator  go to state 5


State 1

    9 fator: AIDENT .

    $default  reduce using rule 9 (fator)


State 2

   10 fator: BIDENT .

    $default  reduce using rule 10 (fator)


State 3

    0 $accept: expr . $end
    1 expr: expr . MAIS termo
    2     | expr . MENOS termo
    3     | expr . OR termo

    $end   shift, and go to state 6
    MAIS   shift, and go to state 7
    MENOS  shift, and go to state 8
    OR     shift, and go to state 9


State 4

    4 expr: termo .
    5 termo: termo . ASTERISCO fator
    6      | termo . DIV fator
    7      | termo . AND fator

    ASTERISCO  shift, and go to state 10
    DIV        shift, and go to state 11
    AND        shift, and go to state 12

    $default  reduce using rule 4 (expr)


State 5

    8 termo: fator .

    $default  reduce using rule 8 (termo)


State 6

    0 $accept: expr $end .

    $default  accept


State 7

    1 expr: expr MAIS . termo

    AIDENT  shift, and go to state 1
    BIDENT  shift, and go to state 2

    termo  go to state 13
    fator  go to state 5


State 8

    2 expr: expr MENOS . termo

    AIDENT  shift, and go to state 1
    BIDENT  shift, and go to state 2

    termo  go to state 14
    fator  go to state 5


State 9

    3 expr: expr OR . termo

    AIDENT  shift, and go to state 1
    BIDENT  shift, and go to state 2

    termo  go to state 15
    fator  go to state 5


State 10

    5 termo: termo ASTERISCO . fator

    AIDENT  shift, and go to state 1
    BIDENT  shift, and go to state 2

    fator  go to state 16


State 11

    6 termo: termo DIV . fator

    AIDENT  shift, and go to state 1
    BIDENT  shift, and go to state 2

    fator  go to state 17


State 12

    7 termo: termo AND . fator

    AIDENT  shift, and go to state 1
    BIDENT  shift, and go to state 2

    fator  go to state 18


State 13

    1 expr: expr MAIS termo .
    5 termo: termo . ASTERISCO fator
    6      | termo . DIV fator
    7      | termo . AND fator

    ASTERISCO  shift, and go to state 10
    DIV        shift, and go to state 11
    AND        shift, and go to state 12

    $default  reduce using rule 1 (expr)


State 14

    2 expr: expr MENOS termo .
    5 termo: termo . ASTERISCO fator
    6      | termo . DIV fator
    7      | termo . AND fator

    ASTERISCO  shift, and go to state 10
    DIV        shift, and go to state 11
    AND        shift, and go to state 12

    $default  reduce using rule 2 (expr)


State 15

    3 expr: expr OR termo .
    5 termo: termo . ASTERISCO fator
    6      | termo . DIV fator
    7      | termo . AND fator

    ASTERISCO  shift, and go to state 10
    DIV        shift, and go to state 11
    AND        shift, and go to state 12

    $default  reduce using rule 3 (expr)


State 16

    5 termo: termo ASTERISCO fator .

    $default  reduce using rule 5 (termo)


State 17

    6 termo: termo DIV fator .

    $default  reduce using rule 6 (termo)


State 18

    7 termo: termo AND fator .

    $default  reduce using rule 7 (termo)
